# react-native-fast-markdown

./: TEST.md
go/: go.mod  main.go
js/: README.md  bun.lockb  index.ts  package.json
rust/: Cargo.toml  build.sh  build_dev.sh
rust/src/: android.rs  ios.rs  lib.rs  main.rs  test.rs
