[package]
name = "react-native-fast-markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = "1.0.0-alpha.20"
pulldown-cmark = { version = "0.12.1", features = [
	"simd",
	"html",
], default-features = false }
jsi = { git = "https://github.com/respondchat/jsi-rs", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"], default-features = true }
syntect = "5.0.0"
ordered-float = "5.0.0"
linkify = "0.10.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
